# GeneRegulatorySystems-App

./: .gitignore  ARCHITECTURE.md  README.md  dev.sh
.github/workflows/: ci.yml  release.yml
backend/: Manifest-v1.11.toml  Manifest-v1.12.toml  Manifest.toml  Project.toml  README.md  run.jl  smoke-test.sh
backend/examples/: ACDC.schedule.json  celegans_ems.schedule.json  differentiation-tree.schedule.json  kronecker-huge.schedule.json  kronecker-large.schedule.json  kronecker.schedule.json  multifate2-dimer.schedule.json  multifate3-proteolytic.schedule.json  random-differentiation.schedule.json  repressilator-entrained.schedule.json  repressilator-intervened.schedule.json  repressilator.schedule.json  sequential_models.schedule.json  switch.schedule.json
backend/src/: GRSServer.jl  network_representation.jl  phase_space.jl  schedule_bindings.jl
backend/src/schedule/: gene_colours.jl  network_extraction.jl  schedule_storage.jl  schedule_structure.jl  schedule_validation.jl  schedule_visualisation.jl  v1_editing.jl
backend/src/simulation/: gap_tracking.jl  simulation.jl  simulation_controller.jl  viewport.jl  (+2 more)
backend/test/: runtests.jl
docs/: adaptive-rendering-handoff.md  schedule-view-redesign.md  streaming-rebuild-plan.md  trackviewer-redesign.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css  tauri.ts
tauri-app/: Cargo.toml  README.md  tauri.conf.json
tauri-app/capabilities/: default.json
tauri-app/icons/: icon.icns
tauri-app/src/: julia.rs  lib.rs
(+80 files in other folders)
