[package]
name = "GRS-App"
version = "0.1.2"
description = "Gene Regulatory Systems"
authors = ["nifets", "lmshk"]
license = ""
repository = "https://github.com/drostlab/GeneRegulatorySystems-App"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
portpicker = "0.1"
reqwest = { version = "0.12", features = ["blocking"] }
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
zip = "2"
